--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 
         <img src=".//photos/mercury.png" alt="">
     </div>
-   
+    <div class="venus">
+        <img src="./photos/venus.png" alt="">
+    </div>
+    <div class="earth">
+        <img src="./photos/earth.png" alt="">
+    </div>
+   <div class="mars">
+    <img src="./photos/mars.png" alt="">
+   </div>
+   <div class="jupiter">
+        <img src="./photos/jupiter.png" alt="">
+   </div>
+   <div class="saturn">
+    <img src="./photos/saturn.png" alt="">
+   </div>
+   <div class="falling-star">
+    <img src="./photos/falling-star.png" alt="">
+   </div>
+
+
+   <div class="falling-star-2">
+    <img src="./photos/kindpng_492252.png" alt="">
+   </div>
 </body>
 </html>
